# toto-check

./: .gitmodules  CMakeLists.txt  README.md  cron-6-49.sh  get-data-toto-bg-6-49.sh  get-latest-toto-bg-6-49.sh  parse-archive-6-49.sh
data/6-49/: archive-1958.txt  archive-1959.txt  archive-1960.txt  archive-1961.txt  archive-1962.txt  archive-1963.txt  archive-1964.txt  archive-1965.txt  archive-1966.txt  archive-1967.txt  archive-1968.txt  archive-1969.txt  archive-1970.txt  archive-1971.txt  archive-1972.txt  archive-1973.txt  archive-1974.txt  archive-1975.txt  archive-1976.txt  archive-1977.txt  archive-1978.txt  archive-1979.txt  archive-1980.txt  archive-1981.txt  archive-1982.txt  archive-1983.txt  archive-1984.txt  archive-1985.txt  archive-1986.txt  archive-1987.txt  archive-1988.txt  archive-1989.txt  archive-1990.txt  archive-1991.txt  archive-1992.txt  archive-1993.txt  archive-1994.txt  archive-1995.txt  archive-1996.txt  archive-1997.txt  (+23 more)
src/: CMakeLists.txt  check-cli-6-49.cpp  check-ws-6-49.cpp  common.h  reload-archive-6-49.cpp
static/: incppect.js  index.html
